feature: actualización del tablero a Redis